# OpenPV.Extensions.Control

./: .gitattributes  .gitignore  .gitmodules  Ahsoka.Control.sln  Ahsoka.Extensions.Control.sln  Ahsoka.Extensions.Control.yml  CMakePresets.json  Directory.Build.props  GitVersion.yml  WindowsHardwareConfiguration.json  codecoverage.runsettings
.fork/: custom-commands.json
Ahsoka.BuildCoProcessor/: Ahsoka.BuildCoprocessor.csproj  Program.cs
Ahsoka.Coprocessor/openview_s/: CMakeLists.txt  CMakePresets.json  build_firmware.sh  build_setup.sh
Ahsoka.Coprocessor/openview_s/.devcontainer/: Dockerfile  devcontainer.json
Ahsoka.Coprocessor/openview_s/docker/: .gitignore  Dockerfile  create-docker.sh  docker-run-base.sh  docker-run-cubeide.sh  docker-start-base.sh  entrypoint.sh
Ahsoka.Coprocessor/openview_s/firmware/: .gitignore  .mxproject  .project  firmware.ioc
Ahsoka.Coprocessor/openview_s/firmware/CA7/: .project  manifest.prop
Ahsoka.Coprocessor/openview_s/firmware/CA7/DeviceTree/firmware/optee-os/: stm32mp157a-firmware-mx.dts
Ahsoka.Coprocessor/openview_s/firmware/CA7/DeviceTree/firmware/tf-a/: stm32mp157a-firmware-mx.dts
Ahsoka.Coprocessor/openview_s/firmware/CA7/DeviceTree/firmware/u-boot/: stm32mp157a-firmware-mx.dts
Ahsoka.Coprocessor/openview_s/firmware/CM4/: .cproject  .project  STM32MP157AABX_RAM.ld
Ahsoka.Coprocessor/openview_s/firmware/CM4/Core/Inc/: FreeRTOSConfig.h  canHandler.h  canMessageHandler.h  decodeCanConfiguration.h  decodeCanMessages.h  encodeCanMessages.h  lwip.h  lwipopts.h  main.h  nodeList.h  res_mgr_conf.h  resmgr_utility.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h  zmq_message_list.h
Ahsoka.Coprocessor/openview_s/firmware/CM4/Core/Src/: app_freertos.c  canHandler.c  canMessageHandler.c  decodeCanConfiguration.c  decodeCanMessages.c  encodeCanMessages.c  hdlc.c  lwip.c  main.c  nodeList.c  resmgr_utility.c  slip_glue.c  stm32mp1xx_hal_msp.c  stm32mp1xx_hal_timebase_tim.c  stm32mp1xx_it.c  sysmem.c  zmq.c  zmq_message_list.c
Ahsoka.Coprocessor/openview_s/firmware/CM4/OPENAMP/: openamp_conf.h  openamp_log.h
Ahsoka.Coprocessor/openview_s/firmware/CM4/RemoteProc/: fw_cortex_m4.sh
Ahsoka.Coprocessor/openview_s/firmware/Utilities/ResourcesManager/: res_mgr.c
Ahsoka.Core.Can/: Ahsoka.Core.Can.csproj  Ahsoka.Core.Can.extensioninfo.json  Directory.Build.targets  README.md  VisibleInternals.cs
Ahsoka.Core.Can.Ux/: Ahsoka.Core.Can.UX.csproj  App.axaml.cs  README.md
Ahsoka.Core.Can.Ux/ViewModels/: CanSetupViewModel.cs  DiagnosticEventViewModel.cs  MessageViewModel.cs
Ahsoka.Core.Can.Ux/Views/: CANDiagnosticEventEditView.axaml  CANDiagnosticEventEditView.axaml.cs  CANDiagnosticEventView.axaml  CANDiagnosticEventView.axaml.cs  CANMessageEditView.axaml  CANMessageEditView.axaml.cs  CANMessageMuxView.axaml  CANMessageSignalView.axaml  CANMessageValueView.axaml  CANMessageView.axaml  CANNodeView.axaml.cs  CANPortEditView.axaml  CANPortEditView.axaml.cs  CANPortView.axaml.cs  CANSetup.axaml
Ahsoka.Core.Can/Commands/: CanCommand.cs
Ahsoka.Core.Can/Installer/: CANInstallerComponent.cs
Ahsoka.Core.Can/Properties/: CANResources.Designer.cs  CANResources.resx
Ahsoka.Core.Can/Proto/: CanConfiguration.proto
Ahsoka.Core.Can/Resources/: CPPMetadataDictionary.txt  CSharpMetadataDictionary.txt
Ahsoka.Core.Can/Utility/: CanSystemInfo.cs
Ahsoka.Core.IO/: Ahsoka.Core.IO.csproj  Ahsoka.Core.IO.extensioninfo.json  Directory.Build.targets  LICENSE.txt  VisibleInternals.cs
Ahsoka.Core.IO/Commands/: IOTests.cs
Ahsoka.Core.IO/Properties/: IOResources.Designer.cs  IOResources.resx
Ahsoka.Core.IO/Proto/: IOService.proto
Ahsoka.CreateProto/: Ahsoka.CreateProto.csproj  Program.cs
Ahsoka.Extensions.Can/: Ahsoka.Extensions.Can.csproj  CanJsonSerializerContext.cs  Directory.Build.targets  README.md  VisibleInternals.cs
Ahsoka.Extensions.Can.Ux/: Ahsoka.Extensions.Can.UX.csproj  App.axaml  App.axaml.cs  Program.cs  README.md
Ahsoka.Extensions.Can.Ux/ViewModels/: CanSetupViewModel.cs  MessageViewModel.cs  NodeViewModel.cs  PortViewModel.cs  SignalViewModel.cs
Ahsoka.Extensions.Can.Ux/Views/: CANGenerateView.axaml  CANGenerateView.axaml.cs  CANMessageEditView.axaml  CANMessageMuxView.axaml  CANMessageMuxView.axaml.cs  CANMessageSignalView.axaml  CANMessageSignalView.axaml.cs  CANMessageValueView.axaml.cs  CANMessageView.axaml  CANMessageView.axaml.cs  CANNodeEditView.axaml  CANNodeEditView.axaml.cs  CANNodeView.axaml  CANPortEditView.axaml  CANPortView.axaml  CANSetup.axaml  CANSetup.axaml.cs
Ahsoka.Extensions.IO/: Ahsoka.Extensions.IO.csproj  Directory.Build.targets  IOJsonSerializerContext.cs  README.md  VisibleInternals.cs
Ahsoka.Extensions.IO.Ux/: Ahsoka.Extensions.IO.UX.csproj  App.axaml  App.axaml.cs  Program.cs  README.md
Ahsoka.Test.Can/: Ahsoka.Test.Can.csproj  AssemblyInitializer.cs
Ahsoka.Test.Control/: Ahsoka.Test.Control.csproj  AssemblyInitializer.cs  LinearTestBase.cs  WindowsHardwareConfiguration.json
Demos/: Demo.Build.props
Demos/Ahsoka.CS.CAN/: CairoUI.cs  (+7 more)
Demos/Ahsoka_CPP_CAN/: .gitignore  CANServiceConfiguration.json  CMakeLists.txt  CMakePresets.json  CanTests.hpp  OpenLinuxST.PackageInfo.json  main.cpp
Demos/Ahsoka_CPP_CAN/.devcontainer/: devcontainer.json
Demos/Ahsoka_QT_CAN/: .gitignore  CMakeLists.txt  DemoInfo.json  OpenLinuxST.QT.PackageInfo.json  STDemoPackage.1.cancalibration.json  candemo.hpp  main.cpp
Demos/Ahsoka_QT_CAN/Platform_OpenView/: CANServiceConfiguration.json  OpenLinuxST.QT.PackageInfo.json
Demos/Ahsoka_QT_CAN/Platform_OpenViewPro/: OpenViewPro.QT.PackageInfo.json
(+203 files in other folders)
